plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.11-SNAPSHOT'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.project.java'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// 추후 추가 예정
//	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
//	implementation 'org.springframework.boot:spring-boot-starter-aop'

	//Querydsl 추가
	implementation 'com.querydsl:querydsl-jpa:5.1.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.1.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"

	//JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'

	// lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	//test 롬복 사용
	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	//devtool
	developmentOnly 'org.springframework.boot:spring-boot-devtools'


	//validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.14.0'

	// swagger
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'

	implementation("org.postgresql:postgresql:42.6.0") // PostgreSQL JDBC 드라이

	// 이유는 몰라.. 이게 없음 안대..
	implementation 'com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.14.0'
	implementation 'javax.xml.bind:jaxb-api:2.3.1'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

//querydsl 설정
def generated = 'src/main/generated'

//querydsl Qclass 파일 생성 위치를 지정
tasks.withType(JavaCompile){
	options.generatedSourceOutputDirectory = file(generated)
}

// java source set 에 querydsl Qclass 위치 추가
sourceSets {
	main.java.srcDirs += "$projectDir/build/generated"
}

// gralde clean 시에 지정한 Qclass 디렉토리 삭제
clean{
	delete file(generated)
}

tasks.named('test') {
	useJUnitPlatform()
}


compileJava { options.compilerArgs << '-parameters' }